// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteList should render a default component 1`] = `
<Fragment>
  <div
    className="infinite-list"
  >
    <div
      className="spacer"
      key="infinite-spinner-full"
      style={
        Object {
          "height": "100%",
        }
      }
    />
    <div
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <List
      dividerStyle="none"
      paddingStyle="none"
      role="none"
    />
    <div
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`InfiniteList should render with initial children 1`] = `
<Fragment>
  <div
    className="infinite-list"
  >
    <div
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <List
      dividerStyle="none"
      paddingStyle="none"
      role="none"
    >
      <ListItem
        data-infinite-list-index={0}
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key=".$item-1"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 1
        </div>
      </ListItem>
      <ListItem
        data-infinite-list-index={1}
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key=".$item-2"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 2
        </div>
      </ListItem>
      <ListItem
        data-infinite-list-index={2}
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key=".$item-3"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 3
        </div>
      </ListItem>
      <ListItem
        data-infinite-list-index={3}
        hasChevron={false}
        isSelectable={false}
        isSelected={false}
        key=".$item-4"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 4
        </div>
      </ListItem>
    </List>
    <div
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`InfiniteList should render with list props 1`] = `
<Fragment>
  <div
    className="infinite-list"
  >
    <div
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <List
      dividerStyle="standard"
      paddingStyle="standard"
      role="listbox"
    >
      <ListItem
        data-infinite-list-index={0}
        hasChevron={false}
        isSelectable={true}
        isSelected={false}
        key=".$item-1"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 1
        </div>
      </ListItem>
      <ListItem
        data-infinite-list-index={1}
        hasChevron={false}
        isSelectable={true}
        isSelected={true}
        key=".$item-2"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 2
        </div>
      </ListItem>
      <ListItem
        data-infinite-list-index={2}
        hasChevron={false}
        isSelectable={true}
        isSelected={false}
        key=".$item-3"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 3
        </div>
      </ListItem>
      <ListItem
        data-infinite-list-index={3}
        hasChevron={false}
        isSelectable={true}
        isSelected={false}
        key=".$item-4"
        refCallback={[Function]}
      >
        <div
          className="item-content"
        >
          item 4
        </div>
      </ListItem>
    </List>
    <div
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </div>
</Fragment>
`;

exports[`InfiniteList should render with list with style props 1`] = `
<div
  class="infinite-list"
>
  <div
    class="spacer"
    style="height:0px"
  />
  <ul
    class="list padding-standard divider-standard"
    role="listbox"
  >
    <li
      aria-selected="false"
      class="list-item is-selectable item1"
      data-infinite-list-index="0"
      data-item-show-focus="true"
      role="option"
      tabindex="0"
    >
      <div
        class="item-fill"
      >
        <div
          class="item-content"
        >
          item 1
        </div>
      </div>
    </li>
    <li
      aria-selected="true"
      class="list-item selected is-selectable item2"
      data-infinite-list-index="1"
      data-item-show-focus="true"
      role="option"
      tabindex="0"
    >
      <div
        class="item-fill"
      >
        <div
          class="item-content"
        >
          item 2
        </div>
      </div>
    </li>
    <li
      aria-selected="false"
      class="list-item is-selectable item3"
      data-infinite-list-index="2"
      data-item-show-focus="true"
      role="option"
      tabindex="0"
    >
      <div
        class="item-fill"
      >
        <div
          class="item-content"
        >
          item 3
        </div>
      </div>
    </li>
    <li
      aria-selected="false"
      class="list-item is-selectable item4"
      data-infinite-list-index="3"
      data-item-show-focus="true"
      role="option"
      tabindex="0"
    >
      <div
        class="item-fill"
      >
        <div
          class="item-content"
        >
          item 4
        </div>
      </div>
    </li>
  </ul>
  <div
    class="spacer"
    style="height:0px"
  />
</div>
`;

exports[`InfiniteList should render with no children and loading 1`] = `
<Fragment>
  <div
    className="infinite-list"
  >
    <div
      className="spacer"
      key="infinite-spinner-full"
      style={
        Object {
          "height": "100%",
        }
      }
    >
      <div
        className="initial-loading-indicator"
      />
    </div>
    <div
      className="spacer"
      key="infinite-spacer-0"
      style={
        Object {
          "height": "0px",
        }
      }
    />
    <List
      dividerStyle="none"
      paddingStyle="none"
      role="none"
    />
    <div
      className="spacer"
      key="infinite-spacer-1"
      style={
        Object {
          "height": "0px",
        }
      }
    />
  </div>
</Fragment>
`;
